OO-8301: Show curriculum elements in catalog